gcc/testsuite/rust/rustc/ui/const-generics/issues/issue-76701-ty-param-in-const.rs
// revisions: full min
#![cfg_attr(full, feature(const_generics))]
#![cfg_attr(full, allow(incomplete_features))]
#![cfg_attr(min, feature(min_const_generics))]

fn ty_param<T>() -> [u8; std::mem::size_of::<T>()] {
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
    todo!()
}

fn const_param<const N: usize>() -> [u8; N + 1] {
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
    todo!()
}

fn main() {}

